tests/negative/gold/interface5-test.gold
tests/negative/interface5-test.toit:7:20: error: Not an interface
class B implements A:
                   ^
Compilation failed
